fix(Field): label-align top works well with label-width (#11684)
* fix(Field): label-align top works well with label-width

* fix(Field): update snapshot

* fix(Field): break long label when `labelAlign="top"`

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -23,15 +23,6 @@
 .van-field {
   flex-wrap: wrap;
 
-  &--label {
-    &-top {
-      .van-field__value {
-        flex: none;
-        width: 100%;
-      }
-    }
-  }
-
   &__label {
     flex: none;
     box-sizing: border-box;
@@ -50,7 +41,11 @@
     }
 
     &--top {
+      display: flex;
+      width: 100%;
+      text-align: left;
       margin-bottom: var(--van-padding-base);
+      word-break: break-word;
     }
 
     &--required {
